crates/ferrobridge-hl7v2/tests/it/map/snapshots/it__map__bundle__adt_a01_bundle.snap
---
source: crates/ferrobridge-hl7v2/tests/it/map/bundle.rs
expression: pretty(mapped.bundle())
---
{
  "entry": [
    {
      "fullUrl": "urn:uuid:7355b8c6-cc3c-8cf6-94ae-b0573687a1f3",
      "resource": {
        "destination": [
          {
            "endpoint": "urn:ferrobridge:hl7v2-hd:EHR",
            "name": "EHR",
            "receiver": {
              "reference": "urn:uuid:0431792f-60e8-83a2-8406-81a40cd65578"
            },
            "target": {
              "reference": "urn:uuid:2e0737c0-9715-8c0c-a431-c198e1234138"
            }
          }
        ],
        "eventCoding": {
          "code": "A01",
          "display": "ADT^A01^ADT_A01",
          "system": "http://terminology.hl7.org/CodeSystem/v2-0003"
        },
        "meta": {
          "tag": [
            {
              "system": "http://terminology.hl7.org/CodeSystem/v2-0103"
            }
          ]
        },
        "resourceType": "MessageHeader",
        "sender": {
          "reference": "urn:uuid:b1c14296-e84e-8791-9199-8ffc6f61e39f"
        },
        "source": {
          "endpoint": "urn:ferrobridge:hl7v2-hd:ADMIT",
          "name": "ADMIT"
        }
      }
    },
    {
      "fullUrl": "urn:uuid:b1c14296-e84e-8791-9199-8ffc6f61e39f",
      "resource": {
        "identifier": [
          {
            "value": "NORTHHOSP"
          }
        ],
        "resourceType": "Organization"
      }
    },
    {
      "fullUrl": "urn:uuid:2e0737c0-9715-8c0c-a431-c198e1234138",
      "resource": {
        "identifier": [
          {
            "value": "EHR"
          }
        ],
        "resourceType": "Device"
      }
    },
    {
      "fullUrl": "urn:uuid:0431792f-60e8-83a2-8406-81a40cd65578",
      "resource": {
        "identifier": [
          {
            "value": "SOUTHCLINIC"
          }
        ],
        "resourceType": "Organization"
      }
    },
    {
      "fullUrl": "urn:uuid:78c72ab1-5c8f-820f-acf2-c364ba4942e6",
      "resource": {
        "birthDate": "1992-03-04",
        "gender": "female",
        "identifier": [
          {
            "type": {
              "coding": [
                {
                  "code": "MR"
                }
              ]
            },
            "value": "PAT-0002"
          }
        ],
        "name": [
          {
            "family": "Zoë",
            "given": [
              "Anna"
            ],
            "use": "official"
          }
        ],
        "resourceType": "Patient"
      }
    },
    {
      "fullUrl": "urn:uuid:6fb17739-8d1e-863d-93f7-03ad824527a7",
      "resource": {
        "resourceType": "Account",
        "status": "active"
      }
    },
    {
      "fullUrl": "urn:uuid:3391245a-4630-8a0c-9ff4-4d3f4cf92364",
      "resource": {
        "class": {
          "code": "IMP",
          "display": "inpatient encounter",
          "system": "http://terminology.hl7.org/CodeSystem/v3-ActCode"
        },
        "location": [
          {
            "location": {
              "reference": "urn:uuid:2a1cc760-6f7e-88a4-9bb6-7046276bec22"
            },
            "status": "active"
          }
        ],
        "resourceType": "Encounter",
        "status": "in-progress"
      }
    },
    {
      "fullUrl": "urn:uuid:2a1cc760-6f7e-88a4-9bb6-7046276bec22",
      "resource": {
        "identifier": [
          {
            "value": "A"
          }
        ],
        "mode": "instance",
        "partOf": {
          "reference": "urn:uuid:89520c8a-83db-81e0-9467-ab38e31d8111"
        },
        "physicalType": {
          "coding": [
            {
              "code": "bd",
              "system": "http://terminology.hl7.org/CodeSystem/location-physical-type"
            }
          ]
        },
        "resourceType": "Location"
      }
    },
    {
      "fullUrl": "urn:uuid:089c96c6-46b2-8554-a152-22ef8e2992b6",
      "resource": {
        "identifier": [
          {
            "value": "WARD1"
          }
        ],
        "resourceType": "Location"
      }
    },
    {
      "fullUrl": "urn:uuid:89520c8a-83db-81e0-9467-ab38e31d8111",
      "resource": {
        "identifier": [
          {
            "value": "101"
          }
        ],
        "mode": "instance",
        "partOf": {
          "reference": "urn:uuid:089c96c6-46b2-8554-a152-22ef8e2992b6"
        },
        "physicalType": {
          "coding": [
            {
              "code": "ro",
              "system": "http://terminology.hl7.org/CodeSystem/location-physical-type"
            }
          ]
        },
        "resourceType": "Location"
      }
    }
  ],
  "identifier": {
    "value": "MSG00002"
  },
  "resourceType": "Bundle",
  "timestamp": "2026-09-25T09:00:00+02:00",
  "type": "message"
}
