crates/ferrobridge-hl7v2/tests/it/map/snapshots/it__map__bundle__adt_a01_outcomes.snap
---
source: crates/ferrobridge-hl7v2/tests/it/map/bundle.rs
expression: summary(&mapped)
---
[
    "version-selected: VersionSelected { structure: \"ADT_A01\", version: \"2.5.1\", declared: Some(\"2.5.1\") }",
    "unsupported-assignment: MSH[1]-10(1) segment-msh-to-bundle MSH-10 -> identifier.system [/to be determined by the implementer/]",
    "unmapped-component: MSH[1]-9(1) datatype-msg-to-coding component 1",
    "unmapped-component: MSH[1]-9(1) datatype-msg-to-coding component 3",
    "unresolved-table: MSH[1]-11(1) datatype-pt-to-meta PT.1 -> tag[1].code [unspecified_mapping]",
    "narrative-condition: MSH[1] message-adt-a01-to-bundle ADT_A01.MSH -> Provenance[1] []",
    "no-segment-map: MSH[1] Provenance [\"segment-msh-operator-to-provenance\", \"segment-msh-source-to-provenance\", \"segment-msh-transformation-to-provenance\"]",
    "unmapped-field: MSH[1]-12",
    "unmapped-field: MSH[1]-18",
    "unevaluable-assignment: EVN[1] segment-evn-to-provenance EVN -> activity.coding.display [MSG.1]",
    "unevaluable-assignment: EVN[1] segment-evn-to-provenance EVN -> activity.coding.display [MSG.1]",
    "narrative-condition: PID[1]-3(1) datatype-cx-to-identifier CX.4 -> assigner(Organization) []",
    "unsupported-condition: PID[1]-3(1) datatype-cx-to-identifier CX.4 -> system [IF CX.4 IN http://hl7.org/implement/standards/fhir/identifier-registry.html]",
    "narrative-condition: PID[1] message-adt-a01-to-bundle ADT_A01.PID -> Provenance[4] []",
    "unmapped-field: PID[1]-1",
    "unknown-element: PV1[1]-3(1) datatype-pl-to-location PL.1 -> [4].location(Location.mode) [the element table does not resolve the target path]",
    "unknown-element: PV1[1]-3(1) datatype-pl-to-location PL.1 -> [4].location(Location.physicalType.coding.code) [the element table does not resolve the target path]",
    "unknown-element: PV1[1]-3(1) datatype-pl-to-location PL.1 -> [4].location(Location.physicalType.coding.system) [the element table does not resolve the target path]",
    "unsupported-condition: PV1[1] message-adt-a01-to-bundle ADT_A01.PV1 -> Coverage[1] [IF PV1-20 VALUE]",
    "unmapped-field: PV1[1]-1",
    "sibling-unresolved: PV1[1]-3(1) datatype-pl-to-location PL.1 -> [4].partOf.reference(Location[6]) [6]",
    "finest-sibling: PV1[1]-3(1) segment-pv1-to-encounter PV1-3 -> location[1].location(Location) [1]",
    "superseded: EVN[1]-2(1) segment-evn-to-provenance EVN-2 -> recorded []",
    "missing-required: Provenance lacks Provenance.target",
]
