crates/ferrobridge-hl7v2/tests/it/map/snapshots/it__map__bundle__mdm_t02_outcomes.snap
---
source: crates/ferrobridge-hl7v2/tests/it/map/bundle.rs
expression: summary(&mapped)
---
[
    "version-selected: VersionSelected { structure: \"MDM_T02\", version: \"2.5.1\", declared: Some(\"2.5.1\") }",
    "unsupported-assignment: MSH[1]-10(1) segment-msh-to-bundle MSH-10 -> identifier.system [/to be determined by the implementer/]",
    "unmapped-component: MSH[1]-9(1) datatype-msg-to-coding component 1",
    "unmapped-component: MSH[1]-9(1) datatype-msg-to-coding component 3",
    "unresolved-table: MSH[1]-11(1) datatype-pt-to-meta PT.1 -> tag[1].code [unspecified_mapping]",
    "no-segment-map: MSH[1] Provenance [\"segment-msh-operator-to-provenance\", \"segment-msh-source-to-provenance\", \"segment-msh-transformation-to-provenance\"]",
    "no-segment-map: MSH[1] Provenance [\"segment-msh-operator-to-provenance\", \"segment-msh-source-to-provenance\", \"segment-msh-transformation-to-provenance\"]",
    "unmapped-field: MSH[1]-12",
    "unevaluable-assignment: EVN[1] segment-evn-to-provenance EVN -> activity.coding.display [MSG.1]",
    "narrative-condition: PID[1]-3(1) datatype-cx-to-identifier CX.4 -> assigner(Organization) []",
    "unsupported-condition: PID[1]-3(1) datatype-cx-to-identifier CX.4 -> system [IF CX.4 IN http://hl7.org/implement/standards/fhir/identifier-registry.html]",
    "unsupported-assignment: PID[1] segment-pid-patient-to-provenance PID -> recorded [/time of transformation/]",
    "unmapped-field: PID[1]-1",
    "unsupported-condition: PV1[1] message-mdm-t02-to-bundle MDM_T02.PV1 -> Coverage[1] [IF PV1-20 VALUE]",
    "unmapped-field: PV1[1]-1",
    "narrative-condition: TXA[1]-2(1) datatype-cwe-to-codeableconcept CWE.1 -> coding[1].code []",
    "narrative-condition: TXA[1] message-mdm-t02-to-bundle MDM_T02.TXA -> Provenance []",
    "unmapped-field: TXA[1]-1",
    "unmapped-field: TXA[1]-4",
    "unknown-element: OBX[1]-5(1) segment-obx-to-documentreference OBX-5 -> content[4].data [the element table does not resolve the target path]",
    "unknown-element: OBX[1]-5(1) segment-obx-to-documentreference OBX-5 -> content[4].contentType [the element table does not resolve the target path]",
    "unmapped-field: OBX[1]-1",
    "unmapped-field: OBX[1]-2",
    "unmapped-field: OBX[1]-3",
    "unmapped-field: OBX[1]-11",
    "missing-required: Provenance lacks Provenance.target",
    "missing-required: Provenance lacks Provenance.target",
    "missing-required: DocumentReference lacks DocumentReference.status",
]
