crates/ferrobridge-hl7v2/tests/it/map/snapshots/it__map__bundle__oru_r01_bundle.snap
---
source: crates/ferrobridge-hl7v2/tests/it/map/bundle.rs
expression: pretty(mapped.bundle())
---
{
  "entry": [
    {
      "fullUrl": "urn:uuid:c822fc59-1469-810b-b7da-7dc0ac4fbe91",
      "resource": {
        "destination": [
          {
            "endpoint": "urn:ferrobridge:hl7v2-hd:EHR",
            "name": "EHR",
            "receiver": {
              "reference": "urn:uuid:7e1712a4-82b1-84bd-bcd4-a1f05cda7b42"
            },
            "target": {
              "reference": "urn:uuid:c1da12bf-07ff-8f41-98c1-3afc98110999"
            }
          }
        ],
        "eventCoding": {
          "code": "R01",
          "display": "ORU^R01^ORU_R01",
          "system": "http://terminology.hl7.org/CodeSystem/v2-0003"
        },
        "meta": {
          "tag": [
            {
              "system": "http://terminology.hl7.org/CodeSystem/v2-0103"
            }
          ]
        },
        "resourceType": "MessageHeader",
        "sender": {
          "reference": "urn:uuid:8e19195b-7cf5-8b2e-8c5e-21b195f1b97a"
        },
        "source": {
          "endpoint": "urn:ferrobridge:hl7v2-hd:LAB",
          "name": "LAB"
        }
      }
    },
    {
      "fullUrl": "urn:uuid:8e19195b-7cf5-8b2e-8c5e-21b195f1b97a",
      "resource": {
        "identifier": [
          {
            "value": "NORTHLAB"
          }
        ],
        "resourceType": "Organization"
      }
    },
    {
      "fullUrl": "urn:uuid:c1da12bf-07ff-8f41-98c1-3afc98110999",
      "resource": {
        "identifier": [
          {
            "value": "EHR"
          }
        ],
        "resourceType": "Device"
      }
    },
    {
      "fullUrl": "urn:uuid:7e1712a4-82b1-84bd-bcd4-a1f05cda7b42",
      "resource": {
        "identifier": [
          {
            "value": "SOUTHCLINIC"
          }
        ],
        "resourceType": "Organization"
      }
    },
    {
      "fullUrl": "urn:uuid:60d19f3d-6498-876a-9eef-0e41ea492b9a",
      "resource": {
        "address": [
          {
            "city": "Musterstadt",
            "country": "DE",
            "postalCode": "12345"
          }
        ],
        "birthDate": "1980-01-01",
        "gender": "male",
        "identifier": [
          {
            "type": {
              "coding": [
                {
                  "code": "MR"
                }
              ]
            },
            "value": "PAT-0001"
          }
        ],
        "name": [
          {
            "family": "Müller",
            "given": [
              "Jörg"
            ],
            "use": "official"
          }
        ],
        "resourceType": "Patient"
      }
    },
    {
      "fullUrl": "urn:uuid:4f3ebdf7-3106-8138-a2fe-29858b43d2f3",
      "resource": {
        "class": {
          "code": "AMB",
          "display": "ambulatory",
          "system": "http://terminology.hl7.org/CodeSystem/v3-ActCode"
        },
        "resourceType": "Encounter",
        "status": "in-progress"
      }
    },
    {
      "fullUrl": "urn:uuid:c58188ab-dff0-86a9-99ac-bcbc44199925",
      "resource": {
        "collection": {
          "collectedDateTime": "2026-09-25T12:00:00+02:00"
        },
        "resourceType": "Specimen"
      }
    },
    {
      "fullUrl": "urn:uuid:979652b2-faa0-8bee-b607-508c7ac04184",
      "resource": {
        "code": {
          "coding": [
            {
              "display": "Glucose",
              "system": "LN"
            }
          ]
        },
        "effectiveDateTime": "2026-09-25T13:00:00+02:00",
        "interpretation": [
          {
            "coding": [
              {
                "code": "N",
                "display": "Normal",
                "system": "http://terminology.hl7.org/CodeSystem/v3-ObservationInterpretation"
              }
            ]
          }
        ],
        "referenceRange": [
          {
            "text": "3.9-5.8"
          }
        ],
        "resourceType": "Observation",
        "status": "final",
        "valueQuantity": {
          "value": 5.4
        }
      }
    },
    {
      "fullUrl": "urn:uuid:1e03b490-04d6-8a8b-a008-934fc5a635bf",
      "resource": {
        "code": {
          "coding": [
            {
              "display": "Sodium",
              "system": "LN"
            }
          ]
        },
        "effectiveDateTime": "2026-09-25T13:00:00+02:00",
        "interpretation": [
          {
            "coding": [
              {
                "code": "N",
                "display": "Normal",
                "system": "http://terminology.hl7.org/CodeSystem/v3-ObservationInterpretation"
              }
            ]
          }
        ],
        "referenceRange": [
          {
            "text": "135-145"
          }
        ],
        "resourceType": "Observation",
        "status": "final",
        "valueQuantity": {
          "value": 140
        }
      }
    }
  ],
  "identifier": {
    "value": "MSG00001"
  },
  "resourceType": "Bundle",
  "timestamp": "2026-09-25T14:30:00+02:00",
  "type": "message"
}
