crates/ferrobridge-hl7v2/tests/it/map/snapshots/it__map__bundle__oru_r01_counts.snap
---
source: crates/ferrobridge-hl7v2/tests/it/map/bundle.rs
expression: mapped.counts()
---
{
    "group-path": 1,
    "missing-required": 1,
    "narrative-condition": 19,
    "no-datatype-map": 1,
    "no-segment-map": 1,
    "unknown-element": 6,
    "unknown-segment": 1,
    "unmapped-component": 2,
    "unmapped-field": 10,
    "unresolved-table": 1,
    "unsupported-assignment": 1,
    "unsupported-condition": 4,
    "unsupported-target": 1,
    "version-selected": 1,
}
