crates/ferrobridge-hl7v2/tests/it/map/snapshots/it__map__bundle__oru_r01_outcomes.snap
---
source: crates/ferrobridge-hl7v2/tests/it/map/bundle.rs
expression: summary(&mapped)
---
[
    "version-selected: VersionSelected { structure: \"ORU_R01\", version: \"2.5.1\", declared: Some(\"2.5.1\") }",
    "unknown-segment: UnknownSegment { location: Location { segment: \"ZXX\", sequence: 1, field: None, repetition: None, component: None, subcomponent: None } }",
    "unsupported-assignment: MSH[1]-10(1) segment-msh-to-bundle MSH-10 -> identifier.system [/to be determined by the implementer/]",
    "unmapped-component: MSH[1]-9(1) datatype-msg-to-coding component 1",
    "unmapped-component: MSH[1]-9(1) datatype-msg-to-coding component 3",
    "unresolved-table: MSH[1]-11(1) datatype-pt-to-meta PT.1 -> tag[1].code [unspecified_mapping]",
    "narrative-condition: MSH[1] message-oru-r01-to-bundle ORU_R01.MSH -> Provenance[1] []",
    "no-segment-map: MSH[1] Provenance [\"segment-msh-operator-to-provenance\", \"segment-msh-source-to-provenance\", \"segment-msh-transformation-to-provenance\"]",
    "unmapped-field: MSH[1]-12",
    "unmapped-field: MSH[1]-18",
    "narrative-condition: PID[1]-3(1) datatype-cx-to-identifier CX.4 -> assigner(Organization) []",
    "unsupported-condition: PID[1]-3(1) datatype-cx-to-identifier CX.4 -> system [IF CX.4 IN http://hl7.org/implement/standards/fhir/identifier-registry.html]",
    "unsupported-target: PID[1]-11(1) datatype-xad-to-address XAD.1 -> line[1-3] [a label spreads one value over several instances]",
    "narrative-condition: PID[1] message-oru-r01-to-bundle ORU_R01.PATIENT_RESULT.PATIENT.PID -> Provenance[4] []",
    "unmapped-field: PID[1]-1",
    "unsupported-condition: PV1[1] message-oru-r01-to-bundle ORU_R01.PATIENT_RESULT.PATIENT.VISIT.PV1 -> Coverage[1] [IF PV1-20 VALUE]",
    "unmapped-field: PV1[1]-1",
    "group-path: GroupPath { at: Location { segment: \"ORC\", sequence: 1, field: None, repetition: None, component: None, subcomponent: None }, row_path: \"ORU_R01.PATIENT_RESULT.ORDER_OBSERVATION.COMMON_ORDER.ORC\", tree_path: \"ORU_R01.PATIENT_RESULT.ORDER_OBSERVATION.ORC\" }",
    "no-datatype-map: ORC[1]-2(1) segment-orc-to-diagnosticreport ORC-2 -> basedOn(ServiceRequest) [EI to ServiceRequest]",
    "narrative-condition: ORC[1] message-oru-r01-to-bundle ORU_R01.PATIENT_RESULT.ORDER_OBSERVATION.COMMON_ORDER.ORC -> ServiceRequest[1] []",
    "unmapped-field: ORC[1]-1",
    "narrative-condition: OBR[1]-2 segment-obr-to-diagnosticreport OBR-2 -> identifier[1] []",
    "narrative-condition: OBR[1]-2 segment-obr-to-diagnosticreport OBR-2 -> identifier[1].type.coding.code []",
    "narrative-condition: OBR[1]-2 segment-obr-to-diagnosticreport OBR-2 -> identifier[1].type.coding.system []",
    "narrative-condition: OBR[1]-3 segment-obr-to-diagnosticreport OBR-3 -> identifier[2] []",
    "narrative-condition: OBR[1]-3 segment-obr-to-diagnosticreport OBR-3 -> identifier[2].type.coding.code []",
    "narrative-condition: OBR[1]-3 segment-obr-to-diagnosticreport OBR-3 -> identifier[2].type.coding.system []",
    "narrative-condition: OBR[1]-4(1) datatype-cwe-to-codeableconcept CWE.1 -> coding[1].code []",
    "narrative-condition: OBR[1]-2 segment-obr-to-specimen OBR-2 -> accessionIdentifier []",
    "narrative-condition: OBR[1] message-oru-r01-to-bundle ORU_R01.PATIENT_RESULT.ORDER_OBSERVATION.OBR -> ServiceRequest[1] []",
    "unmapped-field: OBR[1]-1",
    "narrative-condition: OBX[1]-3(1) datatype-cwe-to-codeableconcept CWE.1 -> coding[1].code []",
    "narrative-condition: OBX[1]-5 segment-obx-to-observation OBX-5 -> valueString []",
    "unsupported-condition: OBX[1]-5 segment-obx-to-observation OBX-5 -> valueString [IF (OBX-2 EQUALS \"SN\"  AND OBX-5.1  EQUALS \"<>\"]",
    "narrative-condition: OBX[1]-5 segment-obx-to-observation OBX-5 -> valueString []",
    "unknown-element: OBX[1]-6(1) datatype-cwe-to-quantity CWE.1 -> Quantity.code [the element table does not resolve the target path]",
    "unknown-element: OBX[1]-6(1) datatype-cwe-to-quantity CWE.2 -> Quantity.unit [the element table does not resolve the target path]",
    "unknown-element: OBX[1]-6(1) datatype-cwe-to-quantity CWE.3 -> Quantity.system [the element table does not resolve the target path]",
    "unmapped-field: OBX[1]-1",
    "unmapped-field: OBX[1]-2",
    "narrative-condition: OBX[2]-3(1) datatype-cwe-to-codeableconcept CWE.1 -> coding[1].code []",
    "narrative-condition: OBX[2]-5 segment-obx-to-observation OBX-5 -> valueString []",
    "unsupported-condition: OBX[2]-5 segment-obx-to-observation OBX-5 -> valueString [IF (OBX-2 EQUALS \"SN\"  AND OBX-5.1  EQUALS \"<>\"]",
    "narrative-condition: OBX[2]-5 segment-obx-to-observation OBX-5 -> valueString []",
    "unknown-element: OBX[2]-6(1) datatype-cwe-to-quantity CWE.1 -> Quantity.code [the element table does not resolve the target path]",
    "unknown-element: OBX[2]-6(1) datatype-cwe-to-quantity CWE.2 -> Quantity.unit [the element table does not resolve the target path]",
    "unknown-element: OBX[2]-6(1) datatype-cwe-to-quantity CWE.3 -> Quantity.system [the element table does not resolve the target path]",
    "unmapped-field: OBX[2]-1",
    "unmapped-field: OBX[2]-2",
    "missing-required: DiagnosticReport lacks DiagnosticReport.status",
]
