crates/ferrobridge-hl7v2/tests/it/map/snapshots/it__map__bundle__oru_r01_translations.snap
---
source: crates/ferrobridge-hl7v2/tests/it/map/bundle.rs
expression: asked
---
[
    (
        "http://hl7.org/fhir/uv/v2mappings/ConceptMap/table-hl70203-to-v2-0203",
        "MR",
    ),
    (
        "http://hl7.org/fhir/uv/v2mappings/ConceptMap/table-hl70200-to-name-use",
        "L",
    ),
    (
        "http://hl7.org/fhir/uv/v2mappings/ConceptMap/table-hl70001-to-administrative-gender",
        "M",
    ),
    (
        "http://hl7.org/fhir/uv/v2mappings/ConceptMap/table-hl70004-to-v3-actcode",
        "O",
    ),
    (
        "http://hl7.org/fhir/uv/v2mappings/ConceptMap/table-hl70004-to-encounter-status",
        "O",
    ),
    (
        "http://hl7.org/fhir/uv/v2mappings/ConceptMap/table-hl70078-to-v3-observationinterpretation",
        "N",
    ),
    (
        "http://hl7.org/fhir/uv/v2mappings/ConceptMap/table-hl70085-to-observation-status",
        "F",
    ),
    (
        "http://hl7.org/fhir/uv/v2mappings/ConceptMap/table-hl70078-to-v3-observationinterpretation",
        "N",
    ),
    (
        "http://hl7.org/fhir/uv/v2mappings/ConceptMap/table-hl70085-to-observation-status",
        "F",
    ),
]
